<resources>
    <string name="app_name">Hillfort</string>
    <string name="select_sight_image">Please select Sight</string>
    <string name="menu_add">Add</string>
    <string name="site_name">Name of Site</string>
    <string name="site_description">Description of Site</string>
    <string name="site_notes">Additional Notes</string>
    <string name="edit_images">Edit Images</string>
    <string name="save_images">Save</string>
    <string name="date_visited">Date visited</string>
    <string name="btn_edit">Edit</string>
    <string name="toast_TitelEinfügen">Titel einfügen</string>
    <string name="add_site">Add Site</string>
    <string name="set_location">Set Location</string>
    <string name="todo">TODO</string>
    <string name="visited">Visited</string>
    <string name="title_activity_site_list">Hillfort</string>
    <string name="title_activity_site">Hillfort</string>
    <string name="title_activity_edit_location">Hillfort</string>
    <string name="title_activity_site_maps">Hillfort</string>
    <string name="label_activity_settings">Hillfort</string>
    <string name="visited_text">Visited:</string>
    <string name="lng_text">Lng:</string>
    <string name="lat_text">Lat:</string>
    <string name="title_activity_login">Hillfort</string>
    <string name="logout">Logout</string>
    <string name="open_map">Open Map</string>
    <string name="btn_signUp">Sign Up</string>
    <string name="btn_log_in">Log In</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">E-Mail</string>
    <string name="toolbar_titleText">Hillfort</string>
    <string name="siteView_toolbar_cancel">Cancel</string>
    <string name="siteView_toolbar_delete">Delete</string>
    <string name="siteView_toolbar_save">Save</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="user_settings">Settings</string>
    <string name="credits">Credits</string>
    <string name="label_acitvity_passwordReset">Hillfort</string>
    <string name="receive_mail">Receive Mail</string>
    <string name="registerd_e_mail">Registerd E-Mail</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>
    <string name="nav_navigator">Navigator</string>
    <string name="nav_map">Map</string>
    <string name="title_navigationView">Hillfort</string>
    <string name="nav_site_statistics">Site Statistics</string>
    <string name="general">General</string>
    <string name="statistics_logo">Hillfort Logo</string>
    <string name="number_of_sites">Number of Sites:</string>
    <string name="username">Username:</string>
    <string name="number_of_favourites">Number of favourites:</string>
    <string name="number_of_visited_sites">Number of visited Sites:</string>
    <string name="new_password">New Password</string>
    <string name="update">Update</string>
    <string name="hillfort_logo">hillfort Logo</string>
    <string name="distance_in_meters">Meters Away:</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="click_on_a_site_s_marker_to_start_navigation">Click on a Site\'s Marker to Start Navigation</string>
    <string name="credits_AlertBox">The Hillfort App was created by Oscar Rosner in the Winter of 2018 at OTH Regensburg for his Kotlin Course.</string>
    <string name="shows_hillfort_logo">Shows Hillfort Logo</string>
</resources>
