<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
>
    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_navigator"
                android:title="@string/nav_navigator"
                android:icon="@drawable/ic_navigation_black_24dp"
                android:checkable="true"/>

    </group>

    <item android:title="@string/general">
        <menu>
            <item
                    android:id="@+id/nav_logout"
                    android:title="@string/menu_logout"
                    android:icon="@drawable/ic_close_black_24dp"
                    android:checkable="true"/>
            <item
                    android:id="@+id/nav_settings"
                    android:title="@string/menu_settings"
                    android:icon="@drawable/ic_settings_black_24dp"
                    android:checkable="true"/>
            <item
                    android:id="@+id/nav_credits"
                    android:icon="@drawable/info"
                    android:title="@string/credits"
                    android:checkable="true"/>
        </menu>
    </item>
</menu>