<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.Settings.SettingsView">
    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:theme="@style/AppTheme">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarSettings"
                app:theme="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary"/>
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
            android:text="@string/number_of_sites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="64dp" android:layout_marginStart="64dp" android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/divider3"/>
    <TextView
            android:text="@string/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="64dp" android:layout_marginStart="64dp"
            app:layout_constraintTop_toBottomOf="@+id/divider" android:layout_marginTop="36dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNumberSitesVisited"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="10dp" android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/textView3" android:layout_marginTop="336dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtNumberFavSites"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="10dp" android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            android:layout_marginTop="381dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/txtUsername"
            android:textSize="18sp"
            android:textColor="@color/buttonRed"
            android:layout_width="0dp" android:layout_height="wrap_content"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            android:layout_marginTop="478dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtNumberOfSites"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="10dp" android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginTop="292dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/number_of_visited_sites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="64dp" android:layout_marginStart="64dp" android:textSize="18sp"
            android:textColor="@color/colorPrimary"/>
    <TextView
            android:text="@string/number_of_favourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="64dp" android:layout_marginStart="64dp" android:textSize="18sp"
            android:textColor="@color/colorPrimary" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>
    <EditText android:layout_width="283dp" android:layout_height="41dp"
              android:hint="@string/new_password"
              android:drawablePadding="10dp"
              android:id="@+id/txtPassword"
              android:textColor="@color/colorPrimary" android:inputType="textPassword"
              android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
              android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textView6"
              app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="64dp"
              android:layout_marginStart="64dp" android:drawableStart="@drawable/ic_lock_outline_black_24dp"
    />
    <Button
            android:id="@+id/btnUpdatePassword"
            android:layout_width="283dp"
            android:layout_height="36dp"
            android:text="@string/update"
            android:enabled="false"
            android:textColor="@color/colorPrimary"
            android:background="@color/buttonRed"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="64dp" android:layout_marginStart="64dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="43dp"
            android:layout_height="41dp"
            android:id="@+id/progressBar"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp" app:layout_constraintStart_toEndOf="@+id/txtPassword"
            android:layout_marginTop="76dp" app:layout_constraintTop_toBottomOf="@+id/divider"
            android:visibility="gone"/>
    <ImageView
            android:layout_width="226dp"
            android:layout_height="145dp" app:srcCompat="@drawable/settings"
            android:id="@+id/imageView6" android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="92dp" android:layout_marginStart="92dp"
            android:contentDescription="@string/hillfort_logo"/>
    <View
            android:id="@+id/divider"
            android:layout_width="330dp"
            android:layout_height="1dp"
            android:background="@color/card_Favorite"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="39dp"
            android:layout_marginRight="39dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="40dp" android:layout_marginStart="40dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <View
            android:id="@+id/divider3"
            android:layout_width="330dp"
            android:layout_height="1dp"
            android:background="@color/card_Favorite"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="36dp" app:layout_constraintTop_toBottomOf="@+id/imageView6"/>
</androidx.constraintlayout.widget.ConstraintLayout>