<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.oscar.hillfort.views.login.LoginView">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:theme="@style/AppTheme">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:theme="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


        <EditText
                android:id="@+id/email"
                android:layout_width="286dp"
                android:layout_height="49dp"
                android:textColor="@color/colorPrimary"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="52dp"
                android:drawableStart="@drawable/ic_person_black_24dp"
                android:drawablePadding="10dp"
                android:layout_marginStart="52dp" android:hint="@string/hint_email" android:text="oscar.rosner@web.de"
                android:drawableLeft="@drawable/ic_person_black_24dp"/>

        <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="146dp"
                android:layout_height="45dp"
                android:layout_marginStart="124dp"
                android:indeterminateTint="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="124dp"
                android:layout_marginTop="548dp"
                app:layout_constraintTop_toTopOf="parent" android:visibility="gone"/>

        <EditText
                android:id="@+id/password"
                android:layout_width="287dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="10dp"
                android:textColor="@color/colorPrimary"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="52dp"
                android:layout_marginStart="52dp" android:hint="@string/hint_password" android:text="aragorn7"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"/>

        <Button
                android:id="@+id/signUp"
                android:layout_width="287dp"
                android:layout_height="37dp"
                android:text="@string/btn_signUp"
                android:textColor="@color/colorPrimary"
                android:background="@color/colorAccent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="52dp"
                android:layout_marginStart="52dp"
                android:textAllCaps="true" app:layout_constraintTop_toBottomOf="@+id/logIn"
                android:layout_marginTop="8dp"/>

        <Button
                android:id="@+id/logIn"
                android:layout_width="287dp"
                android:layout_height="37dp"
                android:textColor="@color/colorPrimary"
                android:text="@string/btn_log_in"
                android:background="@color/buttonPurple"
                android:textAllCaps="true" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="52dp" android:layout_marginStart="52dp"
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/password"
        />
        <ImageView
                android:layout_width="270dp"
                android:layout_height="216dp" app:srcCompat="@drawable/brochure_color"
                android:id="@+id/imageView2" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="64dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="60dp" android:layout_marginStart="60dp" android:visibility="visible"/>
        <TextView
                android:text="@string/forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txtForgotPassword" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="132dp" android:layout_marginStart="132dp"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/signUp" android:layout_marginTop="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>