<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.Settings.SettingsView">
    <Button
            android:id="@+id/btnSendMail"
            android:layout_width="286dp"
            android:layout_height="37dp"
            android:text="@string/receive_mail"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorButtonBlue"
            android:textAllCaps="true" android:layout_marginTop="13dp"
            app:layout_constraintTop_toBottomOf="@+id/txtSendMail" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="63dp" android:layout_marginStart="63dp" tools:text="Receive Mail"/>
    <EditText
            android:id="@+id/txtSendMail"
            android:layout_width="287dp"
            android:layout_height="49dp"
            android:textColor="@color/colorPrimary"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:drawablePadding="10dp"
            android:hint="@string/registerd_e_mail"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="62dp"
            android:layout_marginStart="62dp" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"/>
    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:theme="@style/AppTheme">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarPasswordReset"
                app:theme="@style/AppTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/toolbar_titleText"
                app:titleTextColor="@color/colorPrimary"/>
    </com.google.android.material.appbar.AppBarLayout>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="51dp"
            android:layout_height="49dp"
            android:id="@+id/progressBar"
            android:indeterminateTint="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/btnSendMail" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="180dp" android:layout_marginStart="180dp" android:visibility="gone"
            android:layout_marginTop="20dp"/>
    <ImageView
            android:layout_width="270dp"
            android:layout_height="214dp" app:srcCompat="@drawable/brochure_color"
            android:id="@+id/imageView5" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="68dp"
            android:layout_marginStart="68dp"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>