<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

        <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="1">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" tools:layout_editor_absoluteY="0dp" tools:layout_editor_absoluteX="52dp">

                <android.support.design.widget.AppBarLayout
                        android:id="@+id/appBarLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorAccent"
                        android:fitsSystemWindows="true"
                        app:elevation="0dip"
                        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                    <android.support.v7.widget.Toolbar
                            android:id="@+id/toolbarAdd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:titleTextColor="@color/colorPrimary"/>
                </android.support.design.widget.AppBarLayout>
                <android.support.constraint.ConstraintLayout
                        android:layout_width="374dp"
                        android:layout_height="match_parent">

                    <EditText
                            android:id="@+id/txtSiteName"
                            android:layout_width="222dp"
                            android:layout_height="49dp"
                            android:ems="10"
                            android:hint="@string/site_name"
                            android:inputType="text"
                            android:layout_marginStart="8dp"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="72dp"
                            app:layout_constraintTop_toTopOf="parent" android:layout_marginLeft="8dp"/>

                    <EditText
                            android:id="@+id/txtSiteDescription"
                            android:layout_width="356dp"
                            android:layout_height="44dp"
                            android:ems="10"
                            android:hint="@string/site_description"
                            android:inputType="textPersonName"
                            android:layout_marginEnd="8dp"
                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/txtSiteName"/>

                    <EditText
                            android:id="@+id/txtAdditionNotes"
                            android:layout_width="351dp"
                            android:layout_height="44dp"
                            android:ems="10"
                            android:hint="@string/site_notes"
                            android:inputType="textPersonName"
                            android:layout_marginEnd="8dp"
                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="540dp"
                            app:layout_constraintTop_toBottomOf="@+id/txtSiteName"
                            app:layout_constraintHorizontal_bias="1.0"/>
                    <Button
                            android:text="Add Image"
                            android:layout_width="154dp"
                            android:layout_height="50dp"
                            android:id="@+id/btnAddImage"
                            app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/btnAdd"
                            app:layout_constraintEnd_toStartOf="@+id/btnAddLocation" android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.03"/>
                    <ImageView
                            android:layout_width="171dp"
                            android:layout_height="170dp" app:srcCompat="@drawable/ic_launcher_background"
                            android:id="@+id/siteImage0" app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="12dp"
                            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btnAddImage"
                            tools:ignore="VectorDrawableCompat" android:layout_marginLeft="12dp"
                            app:layout_constraintVertical_bias="0.004"/>
                    <ImageView
                            android:layout_width="171dp"
                            android:layout_height="170dp" app:srcCompat="@drawable/ic_launcher_background"
                            android:id="@+id/siteImage2" app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="12dp"
                            android:layout_marginBottom="60dp" app:layout_constraintBottom_toBottomOf="parent"
                            tools:ignore="VectorDrawableCompat" android:layout_marginLeft="12dp"
                            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/siteImage0"/>
                    <ImageView
                            android:layout_width="171dp"
                            android:layout_height="170dp" app:srcCompat="@drawable/ic_launcher_background"
                            android:id="@+id/siteImage3" app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="192dp"
                            android:layout_marginBottom="60dp" app:layout_constraintBottom_toBottomOf="parent"
                            tools:ignore="VectorDrawableCompat" android:layout_marginLeft="192dp"
                            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/siteImage1"/>
                    <ImageView
                            android:layout_width="171dp"
                            android:layout_height="170dp" app:srcCompat="@drawable/ic_launcher_background"
                            android:id="@+id/siteImage1" app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginStart="192dp"
                            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btnAddImage"
                            tools:ignore="VectorDrawableCompat" android:layout_marginLeft="192dp"
                            app:layout_constraintVertical_bias="0.004"/>
                    <Button
                            android:text="Set Location"
                            android:layout_width="154dp"
                            android:layout_height="50dp"
                            android:id="@+id/btnAddLocation" android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/btnAdd" app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="1.0"/>
                    <Button
                            android:text="Add Site"
                            android:layout_width="356dp"
                            android:layout_height="50dp"
                            android:id="@+id/btnAdd" app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginEnd="8dp"
                            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            app:layout_constraintTop_toBottomOf="@+id/txtSiteDescription"/>
                    <EditText
                            android:layout_width="134dp"
                            android:layout_height="37dp"
                            android:inputType="date"
                            android:ems="10"
                            android:id="@+id/txtDateVisited" tools:text="@tools:sample/date/ddmmyy"
                            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                            android:layout_marginBottom="8dp"
                            app:layout_constraintBottom_toTopOf="@+id/btnAddLocation"
                            app:layout_constraintVertical_bias="0.408" android:layout_marginEnd="8dp"
                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
                    <Switch
                            android:text="Visited "
                            android:layout_width="87dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/switch2" app:layout_constraintStart_toStartOf="parent"
                            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp" android:layout_marginTop="56dp"
                            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.819"/>
                </android.support.constraint.ConstraintLayout>
            </RelativeLayout>
        </TableLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>